[metadata]
name = hybo
version = 0.0.1
author = Matthew, Lee
author_email = bluedisk@gmail.com
description = Pure Python Module for Hybo Lidar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bluedisk/hybo
project_urls =
    Github = https://github.com/bluedisk/hybo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

keywords='hybo iLidar pyserial',

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
